# Reactor

./: .gitignore  CMakeLists.txt  a.txt  main.cpp
inc/: canvas.h  canvas.hpp  reactor.h  reactorcore.h  record_widget.h
src/: canvas.cpp  reactor.cpp  reactorcore.cpp  record_widget.cpp
